--- a/templates/nginx/galaxy.j2
+++ b/templates/nginx/galaxy.j2
@@ -7,8 +7,11 @@ upstream galaxy {
 }
 
 server {
+    # Currently no SSL.
     # Listen on port 443
-    listen        *:443 ssl default_server;
+    #listen        *:443 ssl default_server;
+    # Listen on port 80
+    listen        *:80 default_server;
     # The virtualhost is our domain name
     server_name   "{{ inventory_hostname }}";
 
