--- a/templates/galaxy/config/job_conf.yml.j2
+++ b/templates/galaxy/config/job_conf.yml.j2
@@ -8,7 +8,14 @@ execution:
   environments:
     local_dest:
       runner: local_runner
-
+handling:
+  assign: ['db-skip-locked']
+execution:
+  environments:
+    local_env:
+      runner: local_runner
+      local_slots: {{ galaxy_workers }}
+      tmp_dir: true
 tools:
 - class: local # these special tools that aren't parameterized for remote execution - expression tools, upload, etc
   execution: local_dest
