--- a/templates/galaxy/config/job_conf.yml.j2
+++ b/templates/galaxy/config/job_conf.yml.j2
@@ -2,12 +2,6 @@ runners:
   local_runner:
     load: galaxy.jobs.runners.local:LocalJobRunner
     workers: 4
-
-execution:
-  default: local_dest
-  environments:
-    local_dest:
-      runner: local_runner
 handling:
   assign: ['db-skip-locked']
 execution:
@@ -17,5 +11,5 @@ execution:
       local_slots: {{ galaxy_workers }}
       tmp_dir: true
 tools:
-- class: local # these special tools that aren't parameterized for remote execution - expression tools, upload, etc
-  execution: local_dest
+  - class: local # these special tools that aren't parameterized for remote execution - expression tools, upload, etc
+    environment: local_env
